--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
 
 body {
   background-color: #111111;
+  font-size: 1.6rem;
+}
+html {
+  font-size: 62.2%;
 }
 .header {
   width: 100%;
@@ -26,18 +30,18 @@ body {
 }
 .navlist li {
   list-style: none;
-  margin-right: 60px;
+  margin-right: 6rem;
 }
 .navlist li a {
   color: #ffffff;
-  font-size: 2.4vmin;
+  font-size: 1.8rem;
   font-family: "Poppins";
   text-decoration: none;
   font-weight: 400;
   letter-spacing: 1px;
 }
 .logo > img {
-  height: 36px;
+  height: 3.6rem;
   filter: invert(13%) sepia(77%) saturate(6948%) hue-rotate(359deg)
     brightness(98%) contrast(112%);
 }
@@ -49,7 +53,7 @@ body {
   align-items: center;
   font-family: "Poppins";
 }
-.hero-left>img{
+.hero-left > img {
   width: 60%;
 }
 .hero-right {
@@ -63,18 +67,16 @@ body {
   color: #ff0200;
 }
 .hero-right > h1 {
-  font-size: 10vmin;
+  font-size: 6rem;
   font-weight: 500;
 }
 .hero-right > p {
   font-weight: 100;
-
-  font-size: 2.4vmin;
   letter-spacing: 1px;
 }
 .hero-btn {
-  margin: 15px 0px;
-  padding: 10px 20px;
+  margin: 1.5rem 0rem;
+  padding: 1rem 2rem;
   background-color: #ff0200;
   color: #ffffff;
   font-family: "Poppins";
@@ -100,21 +102,20 @@ body {
 .card {
   width: 18%;
   margin: 2%;
-  padding: 40px 40px;
+  padding: 4rem;
   background-color: #272424;
 }
 .card > img {
-  width: 60px;
+  width: 6rem;
 }
 .card > h4 {
-  margin: 10px 0px;
+  margin: 1rem 0rem;
   font-weight: 500;
-  font-size: 3vmin;
+  font-size: 2rem;
 }
 .card > p {
-  margin: 10px 0px;
+  margin: 1rem 0rem;
   font-weight: 100;
-  font-size: 2.4vmin;
 }
 .bg-red {
   background-color: #ff0200;
@@ -144,9 +145,9 @@ i {
   align-items: center;
 }
 .num-left > h1 {
-  font-size: 20vmin;
+  font-size: 16rem;
   color: #e33232;
-  line-height: 120px;
+  line-height: 12rem;
 }
 .num-left > h4 {
   letter-spacing: 1px;
@@ -162,7 +163,7 @@ i {
 }
 .num-card {
   width: 40%;
-  padding: 40px 20px;
+  padding: 4rem 2rem;
   margin: 2%;
   background-color: #272424;
   display: flex;
@@ -171,9 +172,8 @@ i {
   align-items: center;
 }
 .num-card > h4 {
-  font-size: 9vmin;
+  font-size: 6rem;
   color: #e33232;
-  /* line-height: 120px; */
 }
 .num-card > p {
   font-weight: 100;
@@ -195,7 +195,7 @@ i {
 .section02-content > h1 {
   text-transform: uppercase;
   letter-spacing: 1px;
-  font-size: 5vmin;
+  font-size: 3rem;
 }
 .section02-content > p {
   font-weight: 100;
@@ -213,7 +213,7 @@ i {
   margin: 3%;
 }
 .sec02-card > img {
-  padding: 40px 20px;
+  padding: 4rem 2rem;
   background-color: #272424;
   margin-bottom: 2%;
   width: 100%;
@@ -244,7 +244,7 @@ i {
 }
 .sec03-left > h1 {
   font-weight: 500;
-  font-size: 6vmin;
+  font-size: 4rem;
 }
 .sec03-left > p {
   font-weight: 100;
@@ -267,7 +267,7 @@ footer {
   margin-bottom: 4%;
 }
 .links > h4 {
-  margin-left: 40px;
+  margin-left: 4rem;
   font-weight: 500;
 }
 .footer-content {
@@ -279,50 +279,58 @@ footer {
 }
 .footer-icons > i {
   color: #ffffff;
-  margin-right: 20px;
-  font-size: 4vmin;
+  margin-right: 2rem;
+  font-size: 3rem;
 }
-.navbar>i{
+.navbar > i {
   display: none;
-  font-size: 4vmin;
+  font-size: 3rem;
 }
-@media only screen and (max-width:1200px){
-  .navlist{
-    display: none;
-  }
-  .navbar>i{
-    display: block;
-  }
-  .hero-container{
+@media only screen and (max-width: 1200px) {
+  .hero-container {
     flex-direction: column;
   }
-  .hero-right{
+  .hero-right {
     width: 70%;
   }
 }
-@media only screen and (max-width:700px){
-.cards{
-  flex-direction: column;
+@media only screen and (max-width: 900px) {
+  html {
+    font-size: 55%;
+  }
+  .navlist {
+    display: none;
+  }
+  .navbar > i {
+    display: block;
+  }
 }
-.card{
-  width: 50%;
-}
-.num{
-  flex-direction: column;
-}
-.num-right{
-  flex-direction: column;
-}
-.num-card{
-  width: 80%;
-}
-.sec02-cards{
-  flex-direction: column;
-}
-.sec02-card{
-  width: 60%;
-}
-.section03{
-  flex-direction: column;
-}
+@media only screen and (max-width: 700px) {
+  html {
+    font-size: 50%;
+  }
+  .cards {
+    flex-direction: column;
+  }
+  .card {
+    width: 50%;
+  }
+  .num {
+    flex-direction: column;
+  }
+  .num-right {
+    flex-direction: column;
+  }
+  .num-card {
+    width: 80%;
+  }
+  .sec02-cards {
+    flex-direction: column;
+  }
+  .sec02-card {
+    width: 60%;
+  }
+  .section03 {
+    flex-direction: column;
+  }
 }
